Java 9+ GC parameters update (#2150)